# ta

./: .env.example  .gitignore  README.md  design.md  pyproject.toml  slowlog_analyzer_agent.py  sql_optimizer_agent.py  tidb_optimizer_system.py
docs/: llms-full.txt
sql/: join_performance.sql  query.sql
src/: demo.py
src/agents/: slowlog_analyzer.py  sql_optimizer.py  sql_workflow.py
